# posix32

./: .clang-format  .clang-format-ignore  .clang-format-include  .gitignore  INSTALL.md  README.md  meson.build  meson.options
include/: meson.build
include/posix32/: p32_ctype.h  p32_langinfo.h  p32_locale.h  p32_stdlib.h  p32_string.h  p32_strings.h  p32_uchar.h  p32_wchar.h  p32_wctype.h  posix32-decl.h  posix32.h
include/posix32/posix32-ext/: p32_wchar-ext.h
include/posix32/posix32-wrap/: ctype.in.h  langinfo.in.h  locale.in.h  meson.build  stdlib.in.h  string.in.h  strings.in.h  uchar.in.h  wchar.in.h  wctype.in.h
lib/: config-cmake.h.in  config-internal.h  meson.build  posix32.pc.in
lib/posix32/: meson.build  posix32.c  posix32.def.in
lib/posix32-core/: meson.build
lib/posix32-core/include/: core-crt.h  core-memory.h  core-runtime.h  core-test.h  core-winver.h
lib/posix32-core/src/: crt.c  heap.c  runtime.c  winver.c
lib/posix32-core/tests/: meson.build  posix32-core_test.c
lib/posix32-core/tests/common/: crt_handle.c  test_init.c
lib/posix32-core/tests/crt/: crt_handle.c  meson.build
lib/posix32-core/tests/winver/: meson.build  winver.c
lib/posix32-crt/: meson.build  posix32-crt.def.in
lib/posix32-crt/gperf/: charset.c  charset.gperf  country_codes.c  country_codes.gperf  country_names.c  country_names.gperf  language_codes.c  language_codes.gperf  language_names.c  language_names.gperf  locale_names.c  locale_names.gperf  modifier.c  modifier.gperf  script.c  script.gperf  sorting.c  sorting.gperf  sorting_id.c  sorting_id.gperf  sublanguage.c  sublanguage.gperf
lib/posix32-crt/include/: crt-internal.h  ctype-internal.h  locale-internal.h  string-internal.h  tests-internal.h  time-internal.h  uchar-internal.h  wchar-internal.h
lib/posix32-crt/include/locale_types/: alt_digits.h  base_language.h  charset.h  country.h  known_locale.h  language.h  lc_collate.h  lc_ctype.h  lc_messages.h  lc_monetary.h  lc_numeric.h  lc_time.h  locale_functions.h  locale_info.h  locale_lookup.h  locale_map.h  locale_strings.h  locale_t.h  locale_type.h  modifier.h  script.h  sorting.h  sorting_id.h  sublanguage.h  windows_locale.h
lib/posix32-crt/src/: runtime.c  tls.c
lib/posix32-crt/src/ctype/: ctype.c
lib/posix32-crt/src/ctype/common/: isalnum.c  isalpha.c  isascii.c  isblank.c  iscntrl.c  isdigit.c  isgraph.c  islower.c  isprint.c  ispunct.c  isspace.c  isupper.c  isxdigit.c  toascii.c  tolower.c  toupper.c
lib/posix32-crt/src/locale/: alt_digits.c  charset.c  charset_convert.c  langinfo.c  lc_collate.c  lc_ctype.c  lc_messages.c  lc_monetary.c  lc_numeric.c  lc_time.c  locale.c  locale_charset.c  locale_map.c  locale_string.c  locale_win32.c  misc.c
lib/posix32-crt/src/locale/locale_map/: base_language.c  country.c  known_locale.c  language.c  locale_parser.c  modifier.c  script.c  sorting.c  sorting_id.c  sublanguage.c
lib/posix32-crt/src/locale/locale_string/: language_strings.c  legacy.c
lib/posix32-crt/src/locale/locale_win32/: locale_id.c  locale_name.c  region_id.c  region_name.c
lib/posix32-crt/src/string/: string.c
lib/posix32-crt/src/string/common/: strcasecmp.c  strcat.c  strchr.c  strcmp.c  strcoll.c  strcpy.c  strcspn.c  strdup.c  strlen.c  strncasecmp.c  strncat.c  strncmp.c  strncpy.c  strndup.c  strnlen.c  strpbrk.c  strrchr.c  strspn.c  strstr.c  strtok.c  strtok_r.c  strxfrm.c
lib/posix32-crt/src/uchar/: ascii.c  dbcs.c  iso-8859-1.c  posix.c  sbcs.c  uchar.c  utf8.c
lib/posix32-crt/src/uchar/common/: c16rtomb.c  c32rtomb.c  c8rtomb.c  mbrtoc16.c  mbrtoc32.c  mbrtoc8.c  uchar-impl.c  uchar.c
lib/posix32-crt/src/wchar/: c89.c  c95-ascii.c  c95-dbcs.c  c95-iso-8859-1.c  c95-posix.c  c95-sbcs.c  c95-utf-8.c  c95.c  posix32.c
lib/posix32-crt/src/wchar/c89/: mb_cur_max.c  mblen.c  mbstowcs.c  mbtowc.c  wcstombs.c  wctomb.c
lib/posix32-crt/src/wchar/c95/: btowc.c  mbrlen.c  mbrtowc.c  mbsnrtowcs.c  mbsrtowcs.c  wchar-impl.c  wcrtomb.c  wcsnrtombs.c  wcsrtombs.c  wctob.c
lib/posix32-crt/src/wctype/: wctrans.c  wctype.c
lib/posix32-crt/src/wctype/common/: iswalnum.c  iswalpha.c  iswblank.c  iswcntrl.c  iswctype.c  iswdigit.c  iswgraph.c  iswlower.c  iswprint.c  iswpunct.c  iswspace.c  iswupper.c  iswxdigit.c  towctrans.c  towlower.c  towupper.c  wctrans.c  wctype.c
lib/posix32-crt/src/wstring/: wstring.c
lib/posix32-crt/src/wstring/common/: wcscasecmp.c  wcscoll.c  wcsdup.c  wcsncasecmp.c  wcsndup.c  wcsxfrm.c
lib/posix32-crt/tests/: meson.build  posix32-crt_test.c
lib/posix32-crt/tests/common/: crt_handle.c  locale_test_func1.c  locale_test_func2.c  locale_test_func3.c  locale_test_func4.c  test_init.c
lib/posix32-crt/tests/ctype/: meson.build
lib/posix32-crt/tests/ctype/isctype/: compat.c  posix.c
lib/posix32-crt/tests/ctype/tolower/: compat.c  posix.c
lib/posix32-crt/tests/ctype/toupper/: compat.c  posix.c
lib/posix32-crt/tests/include/: ctype-test.h  string-test.h  uchar-test.h
lib/posix32-crt/tests/locale/: meson.build
lib/posix32-crt/tests/locale/duplocale/: duplocale.c  lc_global_locale.c  lc_global_locale.from-crt.c
lib/posix32-crt/tests/locale/locales/: posix.c  qps-ploc.c  qps-ploca.c  qps-plocm.c
lib/posix32-crt/tests/locale/misc/: locale_map.c  locale_resolver.c  system_default_locale.c  user_default.c  user_default_locale.c
lib/posix32-crt/tests/locale/newlocale/: ansi.c  ascii.c  cp.c  ebcdic.c  mac.c  oem.c  utf-8.c
lib/posix32-crt/tests/locale/setlocale/: bad-charset.c  from-crt.fail.c  from-crt.pass.c  from-env.pass.c  setlocale.c
lib/posix32-crt/tests/locale/uselocale/: bad-charset.c  from-crt.fail.c  from-crt.pass.c  uselocale.c
lib/posix32-crt/tests/string/: meson.build
lib/posix32-crt/tests/string/strcasecmp/: compat.c  locale.c
lib/posix32-crt/tests/string/strchr/: ascii.c  dbcs.c  posix.c  sbcs.c  utf-8.c
lib/posix32-crt/tests/string/strcoll/: compat.c
lib/posix32-crt/tests/uchar/: correct1.c  correct2.c  meson.build
lib/posix32-crt/tests/wchar/: meson.build
lib/posix32-crt/tests/wctype/: meson.build
lib/posix32-crt/tests/wstring/: meson.build
(+158 files in other folders)
