# Target system
option (
  'winnt',
  description: 'Minimal Windows NT version to support',
  type: 'combo',
  choices: ['winxp', 'winvista', 'win7', 'win8', 'win8.1', 'win10'],
  value: 'win10'
)
option (
  'ntddi',
  description: 'Minimal NTDDI version to support (Windows 10 and later)',
  type: 'string',
  value: '0x0A000000'
)
option (
  'uwp',
  description: 'Build library for Universal Windows Platform (UWP)',
  type: 'boolean',
  value: false
)
# Dependencies
option (
  'winpthreads',
  description: 'Use winpthreads explicitly',
  type: 'feature',
  value: 'auto'
)
# Options controlling interface
option (
  'lfs',
  description: 'Use _FILE_OFFEST_BITS=64',
  type: 'feature',
  value: 'auto'
)
option (
  'y2k',
  description: 'Use _TIME_BITS=64',
  type: 'feature',
  value: 'auto'
)
# Build options
option (
  'tests',
  description: 'Build and run tests',
  type: 'boolean',
  value: true
)
